--- a/NYTimesNewsApp/Base.lproj/Main.storyboard
+++ b/NYTimesNewsApp/Base.lproj/Main.storyboard
@@ -1,24 +1,261 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vIQ-7Z-t8L">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="gs2-RF-OeX">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="ATg-eV-L6Q" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Bvb-35-blv">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="72f-WP-Uwv"/>
+                        <color key="backgroundColor" systemColor="systemYellowColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="fly-M1-ftN"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="txv-qa-92F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1418.840579710145" y="-121.20535714285714"/>
+        </scene>
+        <!--Archive List-->
+        <scene sceneID="ka1-rG-Qfn">
+            <objects>
+                <viewController id="BIb-Ly-nKg" customClass="ArchiveController" customModule="NYTimesNewsApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WMs-Iu-78t">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="FxJ-c5-Of8">
+                                <rect key="frame" x="16" y="140" width="382" height="673"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5BU-tC-eC3">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BIb-Ly-nKg" id="8LM-qe-6W5"/>
+                                    <outlet property="delegate" destination="BIb-Ly-nKg" id="vKJ-Ea-g3X"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="oiA-rN-1d7"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="FxJ-c5-Of8" firstAttribute="top" secondItem="oiA-rN-1d7" secondAttribute="top" id="7et-RA-nWA"/>
+                            <constraint firstItem="FxJ-c5-Of8" firstAttribute="width" secondItem="WMs-Iu-78t" secondAttribute="width" multiplier="0.922705" id="G1b-sw-WbL"/>
+                            <constraint firstItem="oiA-rN-1d7" firstAttribute="bottom" secondItem="FxJ-c5-Of8" secondAttribute="bottom" id="PGJ-uG-KnU"/>
+                            <constraint firstItem="FxJ-c5-Of8" firstAttribute="centerX" secondItem="oiA-rN-1d7" secondAttribute="centerX" id="vsn-Gd-5Tj"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Archive List" id="m5x-cF-Ife"/>
+                    <connections>
+                        <outlet property="collection" destination="FxJ-c5-Of8" id="yg1-2K-rAz"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ltc-OM-pBQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1418.840579710145" y="-801.5625"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="p5M-Qi-gAt">
+            <objects>
+                <tabBarController id="vIQ-7Z-t8L" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="BzP-S9-PLz">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" systemColor="systemGrayColor"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Wes-dz-hp7" kind="relationship" relationship="viewControllers" id="B8S-pq-j49"/>
+                        <segue destination="c5P-GO-Cdn" kind="relationship" relationship="viewControllers" id="hJh-Hy-N6Z"/>
+                        <segue destination="0dt-IZ-k1W" kind="relationship" relationship="viewControllers" id="cQz-Kv-Dxz"/>
+                        <segue destination="MND-6Q-D9N" kind="relationship" relationship="viewControllers" id="i3W-oi-BSQ"/>
+                        <segue destination="TH2-8v-Fmu" kind="relationship" relationship="viewControllers" id="or0-ty-zrt"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZNQ-lx-7wz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-380" y="97"/>
+        </scene>
+        <!--Archive-->
+        <scene sceneID="SqL-Av-xhQ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Wes-dz-hp7" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Archive" image="square.and.arrow.up" catalog="system" id="LZZ-hJ-m4N"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="SdX-ec-KLZ">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BIb-Ly-nKg" kind="relationship" relationship="rootViewController" id="m3u-FS-Z0V"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jwP-ye-wMG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="508.69565217391306" y="-801.5625"/>
+        </scene>
+        <!--Most Popular-->
+        <scene sceneID="Iz9-jw-MlA">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="c5P-GO-Cdn" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Most Popular" image="rectangle.portrait.and.arrow.right.fill" catalog="system" id="52c-U9-pXy"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="kUw-ag-nJe">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ATg-eV-L6Q" kind="relationship" relationship="rootViewController" id="qUW-vr-bri"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E9b-Xq-gw8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="508.69565217391306" y="-121.20535714285714"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="J91-Eb-jrY">
+            <objects>
+                <viewController id="7Hm-Md-nde" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="679-B6-f8p">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="PnM-2f-s69"/>
+                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="VhX-Hc-cdP"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EmL-lN-ASv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1419" y="1212"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="7Uh-CY-9kw">
+            <objects>
+                <viewController id="WVQ-hQ-3dg" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4J9-c6-3K1">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="urX-vk-0eO"/>
+                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="lJl-XZ-RW4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QgZ-Wg-taB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1419" y="532"/>
+        </scene>
+        <!--Movie Reviews-->
+        <scene sceneID="eSp-wh-Mbv">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0dt-IZ-k1W" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Movie Reviews" image="pencil.circle.fill" catalog="system" id="b41-2v-4VL"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Gw2-ez-rUB">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="WVQ-hQ-3dg" kind="relationship" relationship="rootViewController" id="xoN-yZ-344"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8Z1-G6-IPd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="509" y="532"/>
+        </scene>
+        <!--Top Stories-->
+        <scene sceneID="a5j-Hj-mwx">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="MND-6Q-D9N" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Top Stories" image="trash" catalog="system" id="l0i-Ot-R02"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aq8-0n-rEy">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="7Hm-Md-nde" kind="relationship" relationship="rootViewController" id="m3y-Dl-CLe"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2hn-M2-W6x" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="509" y="1212"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="gQe-hg-Ctf">
+            <objects>
+                <viewController id="Os4-cV-061" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gQD-ft-Md3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="PFr-ya-bLz"/>
+                        <color key="backgroundColor" systemColor="systemPinkColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="eMJ-Eq-xno"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="h1s-iX-5Dm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1419" y="1905"/>
+        </scene>
+        <!--Favorite-->
+        <scene sceneID="bW7-iO-Mi0">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TH2-8v-Fmu" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Favorite" image="star" catalog="system" id="Vpk-aa-RTj"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9Ml-c2-Cr8">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Os4-cV-061" kind="relationship" relationship="rootViewController" id="hDw-qh-XZA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zlv-2x-K4i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="509" y="1905"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="pencil.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="rectangle.portrait.and.arrow.right.fill" catalog="system" width="128" height="108"/>
+        <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
+        <image name="star" catalog="system" width="128" height="116"/>
+        <image name="trash" catalog="system" width="121" height="128"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
