--- a/NYTimesNewsApp/Base.lproj/Main.storyboard
+++ b/NYTimesNewsApp/Base.lproj/Main.storyboard
@@ -34,7 +34,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="FxJ-c5-Of8">
-                                <rect key="frame" x="16" y="140" width="382" height="673"/>
+                                <rect key="frame" x="16" y="186" width="382" height="627"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5BU-tC-eC3">
                                     <size key="itemSize" width="128" height="128"/>
@@ -48,24 +48,90 @@
                                     <outlet property="delegate" destination="BIb-Ly-nKg" id="vKJ-Ea-g3X"/>
                                 </connections>
                             </collectionView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="type.." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Maj-kv-4bG">
+                                <rect key="frame" x="16" y="140" width="382" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
+                                <connections>
+                                    <action selector="searchText:" destination="BIb-Ly-nKg" eventType="editingChanged" id="BcV-Va-NWQ"/>
+                                    <outlet property="delegate" destination="BIb-Ly-nKg" id="WCd-v8-DG6"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="oiA-rN-1d7"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="FxJ-c5-Of8" firstAttribute="top" secondItem="oiA-rN-1d7" secondAttribute="top" id="7et-RA-nWA"/>
+                            <constraint firstItem="Maj-kv-4bG" firstAttribute="width" secondItem="WMs-Iu-78t" secondAttribute="width" multiplier="0.922705" id="EMp-Z6-HzN"/>
                             <constraint firstItem="FxJ-c5-Of8" firstAttribute="width" secondItem="WMs-Iu-78t" secondAttribute="width" multiplier="0.922705" id="G1b-sw-WbL"/>
                             <constraint firstItem="oiA-rN-1d7" firstAttribute="bottom" secondItem="FxJ-c5-Of8" secondAttribute="bottom" id="PGJ-uG-KnU"/>
+                            <constraint firstItem="Maj-kv-4bG" firstAttribute="top" secondItem="oiA-rN-1d7" secondAttribute="top" id="daY-4i-d1P"/>
+                            <constraint firstItem="Maj-kv-4bG" firstAttribute="centerX" secondItem="oiA-rN-1d7" secondAttribute="centerX" id="ham-jb-MCR"/>
+                            <constraint firstItem="FxJ-c5-Of8" firstAttribute="top" secondItem="Maj-kv-4bG" secondAttribute="bottom" constant="12" id="kSR-Mu-QN7"/>
                             <constraint firstItem="FxJ-c5-Of8" firstAttribute="centerX" secondItem="oiA-rN-1d7" secondAttribute="centerX" id="vsn-Gd-5Tj"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Archive List" id="m5x-cF-Ife"/>
                     <connections>
                         <outlet property="collection" destination="FxJ-c5-Of8" id="yg1-2K-rAz"/>
+                        <outlet property="searchTextField" destination="Maj-kv-4bG" id="6qT-Hy-GeQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ltc-OM-pBQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1418.840579710145" y="-801.5625"/>
+        </scene>
+        <!--Category Controller-->
+        <scene sceneID="S5b-Uu-a5F">
+            <objects>
+                <viewController storyboardIdentifier="CategoryController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="50n-Tl-5ye" customClass="CategoryController" customModule="NYTimesNewsApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Cge-Fg-Pee">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="2cc-3S-hgc">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="tPh-Hs-vr3" style="IBUITableViewCellStyleDefault" id="s9S-l6-fDD">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="s9S-l6-fDD" id="jZO-Q1-Rrp">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="tPh-Hs-vr3">
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="50n-Tl-5ye" id="d9E-zV-VQQ"/>
+                                    <outlet property="delegate" destination="50n-Tl-5ye" id="pPq-ZX-nCF"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="BTA-GN-Yy0"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="BTA-GN-Yy0" firstAttribute="bottom" secondItem="2cc-3S-hgc" secondAttribute="bottom" id="0dd-sc-4dU"/>
+                            <constraint firstItem="2cc-3S-hgc" firstAttribute="leading" secondItem="BTA-GN-Yy0" secondAttribute="leading" id="1tr-II-nwH"/>
+                            <constraint firstItem="2cc-3S-hgc" firstAttribute="top" secondItem="BTA-GN-Yy0" secondAttribute="top" id="b3I-Qv-hw4"/>
+                            <constraint firstItem="BTA-GN-Yy0" firstAttribute="trailing" secondItem="2cc-3S-hgc" secondAttribute="trailing" id="eDQ-4a-LMc"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="table" destination="2cc-3S-hgc" id="vtq-a7-uQR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a49-ne-8P8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2235" y="-802"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="p5M-Qi-gAt">
@@ -75,7 +141,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="barTintColor" systemColor="systemGrayColor"/>
                     </tabBar>
                     <connections>
                         <segue destination="Wes-dz-hp7" kind="relationship" relationship="viewControllers" id="B8S-pq-j49"/>
@@ -93,7 +158,7 @@
         <scene sceneID="SqL-Av-xhQ">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Wes-dz-hp7" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Archive" image="square.and.arrow.up" catalog="system" id="LZZ-hJ-m4N"/>
+                    <tabBarItem key="tabBarItem" title="Archive" image="newspaper" catalog="system" id="LZZ-hJ-m4N"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="SdX-ec-KLZ">
                         <rect key="frame" x="0.0" y="44" width="414" height="96"/>
@@ -112,7 +177,7 @@
         <scene sceneID="Iz9-jw-MlA">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="c5P-GO-Cdn" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Most Popular" image="rectangle.portrait.and.arrow.right.fill" catalog="system" id="52c-U9-pXy"/>
+                    <tabBarItem key="tabBarItem" title="Most Popular" image="star.circle" catalog="system" id="52c-U9-pXy"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="kUw-ag-nJe">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -163,7 +228,7 @@
         <scene sceneID="eSp-wh-Mbv">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0dt-IZ-k1W" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Movie Reviews" image="pencil.circle.fill" catalog="system" id="b41-2v-4VL"/>
+                    <tabBarItem key="tabBarItem" title="Movie Reviews" image="rectangle.and.pencil.and.ellipsis.rtl" catalog="system" id="b41-2v-4VL"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Gw2-ez-rUB">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -182,7 +247,7 @@
         <scene sceneID="a5j-Hj-mwx">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="MND-6Q-D9N" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Top Stories" image="trash" catalog="system" id="l0i-Ot-R02"/>
+                    <tabBarItem key="tabBarItem" title="Top Stories" image="tray" catalog="system" id="l0i-Ot-R02"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="aq8-0n-rEy">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -234,16 +299,13 @@
         </scene>
     </scenes>
     <resources>
-        <image name="pencil.circle.fill" catalog="system" width="128" height="121"/>
-        <image name="rectangle.portrait.and.arrow.right.fill" catalog="system" width="128" height="108"/>
-        <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
+        <image name="newspaper" catalog="system" width="128" height="111"/>
+        <image name="rectangle.and.pencil.and.ellipsis.rtl" catalog="system" width="128" height="92"/>
         <image name="star" catalog="system" width="128" height="116"/>
-        <image name="trash" catalog="system" width="121" height="128"/>
+        <image name="star.circle" catalog="system" width="128" height="121"/>
+        <image name="tray" catalog="system" width="128" height="88"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGrayColor">
-            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
