--- a/NYTimesNewsApp/en.lproj/Main.storyboard
+++ b/NYTimesNewsApp/en.lproj/Main.storyboard
@@ -239,21 +239,191 @@
             </objects>
             <point key="canvasLocation" x="1419" y="1212"/>
         </scene>
-        <!--View Controller-->
+        <!--Create News Controller-->
+        <scene sceneID="1eS-uM-k0P">
+            <objects>
+                <viewController storyboardIdentifier="CreateNewsController" id="3YU-kN-9aB" customClass="CreateNewsController" customModule="NYTimesNewsApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2vc-D8-Q81">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="news title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SfF-eo-9Ks">
+                                <rect key="frame" x="20" y="88" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="3YU-kN-9aB" id="0Uu-bg-hiT"/>
+                                </connections>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="XVl-UB-reR">
+                                <rect key="frame" x="20" y="138" width="374" height="209"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <integer key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <outlet property="delegate" destination="WVQ-hQ-3dg" id="DSM-ZS-CKM"/>
+                                </connections>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sSI-eB-aps">
+                                <rect key="frame" x="20" y="363" width="92" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Add Photo"/>
+                                <connections>
+                                    <action selector="addButtonTapped:" destination="3YU-kN-9aB" eventType="touchUpInside" id="3Gn-Ab-vxk"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rDL-oT-IZf">
+                                <rect key="frame" x="234" y="363" width="160" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="160" id="S2f-L6-fTU"/>
+                                    <constraint firstAttribute="height" constant="160" id="rb5-mm-ZRs"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rfs-yT-1CX">
+                                <rect key="frame" x="20" y="543" width="374" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="JMx-jL-JL7"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Create "/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <integer key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="createButtonTapped:" destination="3YU-kN-9aB" eventType="touchUpInside" id="jNk-14-wMR"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="yTX-XD-rj3"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="SfF-eo-9Ks" firstAttribute="width" secondItem="2vc-D8-Q81" secondAttribute="width" multiplier="0.903382" id="36e-s4-Auc"/>
+                            <constraint firstItem="XVl-UB-reR" firstAttribute="leading" secondItem="SfF-eo-9Ks" secondAttribute="leading" id="4JW-AE-bvf"/>
+                            <constraint firstItem="Rfs-yT-1CX" firstAttribute="leading" secondItem="XVl-UB-reR" secondAttribute="leading" id="8Xe-3X-qiJ"/>
+                            <constraint firstItem="Rfs-yT-1CX" firstAttribute="trailing" secondItem="XVl-UB-reR" secondAttribute="trailing" id="Dop-Dv-1NQ"/>
+                            <constraint firstItem="XVl-UB-reR" firstAttribute="height" secondItem="2vc-D8-Q81" secondAttribute="height" multiplier="0.233259" id="HCe-hN-JmJ"/>
+                            <constraint firstItem="sSI-eB-aps" firstAttribute="top" secondItem="XVl-UB-reR" secondAttribute="bottom" constant="16" id="bbe-dO-i37"/>
+                            <constraint firstItem="SfF-eo-9Ks" firstAttribute="centerX" secondItem="yTX-XD-rj3" secondAttribute="centerX" id="f6K-GL-Cbz"/>
+                            <constraint firstItem="rDL-oT-IZf" firstAttribute="trailing" secondItem="XVl-UB-reR" secondAttribute="trailing" id="fXD-mk-O5D"/>
+                            <constraint firstItem="rDL-oT-IZf" firstAttribute="top" secondItem="sSI-eB-aps" secondAttribute="top" id="g2v-3U-2Fa"/>
+                            <constraint firstItem="sSI-eB-aps" firstAttribute="leading" secondItem="XVl-UB-reR" secondAttribute="leading" id="khy-kX-vx8"/>
+                            <constraint firstItem="XVl-UB-reR" firstAttribute="trailing" secondItem="SfF-eo-9Ks" secondAttribute="trailing" id="oZN-xm-zch"/>
+                            <constraint firstItem="XVl-UB-reR" firstAttribute="top" secondItem="SfF-eo-9Ks" secondAttribute="bottom" constant="16" id="qZT-j7-3r0"/>
+                            <constraint firstItem="Rfs-yT-1CX" firstAttribute="top" secondItem="rDL-oT-IZf" secondAttribute="bottom" constant="20" id="vSN-PY-ZQj"/>
+                            <constraint firstItem="SfF-eo-9Ks" firstAttribute="top" secondItem="yTX-XD-rj3" secondAttribute="top" id="xn6-gA-h2Q"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="aJQ-W5-g9d"/>
+                    <connections>
+                        <outlet property="createButton" destination="Rfs-yT-1CX" id="AT5-AU-bXM"/>
+                        <outlet property="descTextView" destination="XVl-UB-reR" id="LwS-nX-Fma"/>
+                        <outlet property="photoImage" destination="rDL-oT-IZf" id="m3p-Ne-hGt"/>
+                        <outlet property="titleTextField" destination="SfF-eo-9Ks" id="HT1-fM-T5r"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aPg-kh-G1d" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1418.840579710145" y="531.69642857142856"/>
+        </scene>
+        <!--Create news-->
         <scene sceneID="7Uh-CY-9kw">
             <objects>
-                <viewController id="WVQ-hQ-3dg" sceneMemberID="viewController">
+                <viewController id="WVQ-hQ-3dg" customClass="CreateNewsController" customModule="NYTimesNewsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4J9-c6-3K1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="news title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="33T-Ah-YLa">
+                                <rect key="frame" x="20" y="68" width="374" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="dA1-XG-5Uh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="WVQ-hQ-3dg" id="apt-Y3-W8v"/>
+                                </connections>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="WPW-uQ-B7W">
+                                <rect key="frame" x="20" y="126" width="374" height="209"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <dataDetectorType key="dataDetectorTypes" link="YES"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <integer key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <outlet property="delegate" destination="WVQ-hQ-3dg" id="0Om-bz-jE5"/>
+                                </connections>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KV2-i8-y9D">
+                                <rect key="frame" x="20" y="355" width="92" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Add Photo"/>
+                                <connections>
+                                    <action selector="addPhoto:" destination="WVQ-hQ-3dg" eventType="touchUpInside" id="bTU-IJ-kBk"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="B7t-Pt-Xbz">
+                                <rect key="frame" x="234" y="355" width="160" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="160" id="S8R-uu-h7E"/>
+                                    <constraint firstAttribute="width" constant="160" id="z0I-7M-orR"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bYT-L1-Hrn">
+                                <rect key="frame" x="20" y="535" width="374" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="q2y-Ll-iWc"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Create"/>
+                                <connections>
+                                    <action selector="createNews:" destination="WVQ-hQ-3dg" eventType="touchUpInside" id="Uo9-Pj-TS6"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="urX-vk-0eO"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="B7t-Pt-Xbz" firstAttribute="top" secondItem="KV2-i8-y9D" secondAttribute="top" id="3My-B4-kvr"/>
+                            <constraint firstItem="bYT-L1-Hrn" firstAttribute="top" secondItem="B7t-Pt-Xbz" secondAttribute="bottom" constant="20" id="64D-YK-1lI"/>
+                            <constraint firstItem="B7t-Pt-Xbz" firstAttribute="trailing" secondItem="WPW-uQ-B7W" secondAttribute="trailing" id="BDz-BC-hl2"/>
+                            <constraint firstItem="KV2-i8-y9D" firstAttribute="top" secondItem="WPW-uQ-B7W" secondAttribute="bottom" constant="20" id="BWq-iI-BlD"/>
+                            <constraint firstItem="WPW-uQ-B7W" firstAttribute="top" secondItem="33T-Ah-YLa" secondAttribute="bottom" constant="8" symbolic="YES" id="EdU-T1-bVf"/>
+                            <constraint firstItem="33T-Ah-YLa" firstAttribute="centerX" secondItem="urX-vk-0eO" secondAttribute="centerX" id="Ffk-WB-MBp"/>
+                            <constraint firstItem="33T-Ah-YLa" firstAttribute="width" secondItem="4J9-c6-3K1" secondAttribute="width" multiplier="0.903382" id="SRt-tw-mYJ"/>
+                            <constraint firstItem="WPW-uQ-B7W" firstAttribute="trailing" secondItem="33T-Ah-YLa" secondAttribute="trailing" id="WL8-h9-fnV"/>
+                            <constraint firstItem="bYT-L1-Hrn" firstAttribute="leading" secondItem="WPW-uQ-B7W" secondAttribute="leading" id="b4y-ox-hta"/>
+                            <constraint firstItem="WPW-uQ-B7W" firstAttribute="leading" secondItem="33T-Ah-YLa" secondAttribute="leading" id="do9-zf-JiT"/>
+                            <constraint firstItem="WPW-uQ-B7W" firstAttribute="height" secondItem="4J9-c6-3K1" secondAttribute="height" multiplier="0.233259" id="evM-uD-u3x"/>
+                            <constraint firstItem="33T-Ah-YLa" firstAttribute="top" secondItem="urX-vk-0eO" secondAttribute="top" constant="24" id="gg1-Gm-waH"/>
+                            <constraint firstItem="KV2-i8-y9D" firstAttribute="leading" secondItem="WPW-uQ-B7W" secondAttribute="leading" id="kCf-Un-hqP"/>
+                            <constraint firstItem="bYT-L1-Hrn" firstAttribute="trailing" secondItem="WPW-uQ-B7W" secondAttribute="trailing" id="qka-ZN-pIf"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="lJl-XZ-RW4"/>
+                    <navigationItem key="navigationItem" title="Create news" id="lJl-XZ-RW4"/>
+                    <connections>
+                        <outlet property="descTextView" destination="WPW-uQ-B7W" id="cJX-F4-TlX"/>
+                        <outlet property="newPhoto" destination="B7t-Pt-Xbz" id="LZf-Na-fgu"/>
+                        <outlet property="titleTextField" destination="33T-Ah-YLa" id="mC1-lc-u8t"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QgZ-Wg-taB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1419" y="532"/>
+            <point key="canvasLocation" x="2161" y="532"/>
         </scene>
         <!--Create News-->
         <scene sceneID="eSp-wh-Mbv">
@@ -267,7 +437,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="WVQ-hQ-3dg" kind="relationship" relationship="rootViewController" id="xoN-yZ-344"/>
+                        <segue destination="3YU-kN-9aB" kind="relationship" relationship="rootViewController" id="Udx-2z-99S"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Z1-G6-IPd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -405,6 +575,9 @@
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="star.circle" catalog="system" width="128" height="121"/>
         <image name="tray" catalog="system" width="128" height="88"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
